<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_1">

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="522dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_gradient_2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/whatToWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:text="@string/what_to_watch"
        android:textAppearance="@style/what_to_watch"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/search_bar_design"
        android:queryHint="Enter movie title"
        app:layout_constraintTop_toBottomOf="@id/whatToWatch" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:tabIndicatorColor="@color/white"
        app:tabMode="scrollable"
        app:tabTextAppearance="@style/get_started"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_rated" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming" />

    </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabsLayout">

        </FrameLayout>

    <!--    <androidx.viewpager2.widget.ViewPager2-->
    <!--        android:id="@+id/viewPager"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        android:layout_weight="2"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tabs" />-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_marginTop="201dp"-->
    <!--        android:orientation="vertical"-->
    <!--        android:weightSum="3"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:tabMode="scrollable">-->

    <!--        <com.google.android.material.tabs.TabLayout-->
    <!--            android:id="@+id/tabs"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="45dp"-->
    <!--            android:layout_marginStart="30dp"-->
    <!--            android:layout_weight="1" />-->

    <!--        <androidx.viewpager2.widget.ViewPager2-->
    <!--            android:id="@+id/viewPager"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_marginTop="10dp"-->
    <!--            android:layout_weight="2"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/tabs" />-->
    <!--    </LinearLayout>-->


    <!--        <HorizontalScrollView-->
    <!--            android:id="@+id/tabs"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="60dp"-->
    <!--            android:layout_marginStart="30dp"-->
    <!--            android:layout_marginTop="201dp"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent">-->


    <!--            <LinearLayout-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:orientation="horizontal">-->

    <!--                <TextView-->
    <!--                    android:id="@+id/latest"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_marginTop="8dp"-->
    <!--                    android:gravity="center_horizontal|top"-->
    <!--                    android:text="@string/latest"-->
    <!--                    android:textAppearance="@style/get_started" />-->

    <!--                <TextView-->
    <!--                    android:id="@+id/nowPlaying"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginTop="8dp"-->
    <!--                    android:gravity="center_horizontal|top"-->
    <!--                    android:text="@string/now_playing"-->
    <!--                    android:textAppearance="@style/get_started" />-->

    <!--                <TextView-->
    <!--                    android:id="@+id/popular"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginTop="8dp"-->
    <!--                    android:text="@string/popular"-->
    <!--                    android:textAppearance="@style/get_started" />-->

    <!--                <TextView-->
    <!--                    android:id="@+id/topRated"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginTop="8dp"-->
    <!--                    android:text="@string/top_rated"-->
    <!--                    android:textAppearance="@style/get_started" />-->

    <!--                <TextView-->
    <!--                    android:id="@+id/upcoming"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginTop="8dp"-->
    <!--                    android:text="@string/upcoming"-->
    <!--                    android:textAppearance="@style/get_started" />-->
    <!--            </LinearLayout>-->

    <!--        </HorizontalScrollView>-->
    <!--    -->


<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/rvMovies"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="272dp"-->
<!--        app:layout_constraintTop_toTopOf="@+id/rectangle_1"-->
<!--        tools:listitem="@layout/movie_item" />-->

<!--    <ProgressBar-->
<!--        android:id="@+id/progress_bar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="26dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tabsLayout" />-->

</androidx.constraintlayout.widget.ConstraintLayout>